# DDD

./: .gitignore  Makefile  README.md  ROADMAP.md  f8a138ed-b4b9-4bdb-99d5-b6d8206ca0e9
backend/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
backend/scripts/: seed.py  seed_dev.py
backend/src/: dev.py  main.py
backend/src/analyzer/api/: __init__.py
backend/src/analyzer/application/: __init__.py  event_handlers.py
backend/src/analyzer/domain/: __init__.py  events.py  repositories.py
backend/src/analyzer/infrastructure/: repositories.py
backend/src/billing/api/: __init__.py
backend/src/billing/application/: commands.py  event_handlers.py  queries.py  quota_service.py
backend/src/billing/domain/: events.py  models.py  repositories.py
backend/src/billing/infrastructure/: repositories.py
backend/src/conversations/api/: __init__.py
backend/src/conversations/application/: commands.py  event_handlers.py  queries.py
backend/src/conversations/domain/: events.py  models.py  repositories.py
backend/src/conversations/infrastructure/: repositories.py
backend/src/events/api/: __init__.py
backend/src/events/application/: __init__.py
backend/src/iam/api/: __init__.py  authz.py
backend/src/iam/application/: auth_service.py  authorization_service.py  event_handlers.py  token_service.py
backend/src/iam/domain/: events.py  models.py  repositories.py
backend/src/shared/: database.py  deps.py  events.py  exceptions.py  jwt.py  mongo_repository.py  sse.py
backend/stubs/casbin/: __init__.pyi  enforcer.pyi
frontend/: .gitignore  (+5 more)
(+78 files in other folders)
