[project]
name = "ddd-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "casbin>=1.36.0",
    "fastapi[standard]>=0.115.0",
    "faster-whisper>=1.2.1",
    "motor>=3.7.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "motor-stubs>=1.7.1",
]
